# mosaicmem

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  PAPER_DIGEST.md  README.md  RESOURCES.md  RFC-001-core-types.md  RFC-002-geometry-pipeline.md  RFC-003-mosaic-memory-store.md  RFC-004-warped-rope.md  RFC-005-warped-latent.md  RFC-006-prope.md  RFC-007-memory-cross-attention.md  RFC-008-autoregressive-pipeline.md  SPECIFICATION.md  agents.md
.codex/skills/: _index.md  attention-mechanisms.md  debugging.md  geometry-3d.md  memory-system.md  pipeline-integration.md  rust-development.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docs/specs/: README.md  mosaicmem-paper-gap-report.md  mosaicmem-realization-plan.md
specs/001-paper-gap-closure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: backend.rs  lib.rs  main.rs  tensor.rs
src/attention/: memory_cross.rs  mod.rs  prope.rs  rope.rs  warped_latent.rs  warped_rope.rs
src/camera/: intrinsics.rs  mod.rs  pose.rs  trajectory.rs
src/diffusion/: backbone.rs  mod.rs  scheduler.rs  vae.rs
src/geometry/: depth.rs  fusion.rs  mod.rs  pointcloud.rs  projection.rs
src/memory/: manipulation.rs  mod.rs  mosaic.rs  retrieval.rs  store.rs
src/pipeline/: autoregressive.rs  config.rs  inference.rs  mod.rs
src/tui/: bench_tab.rs  coverage_tab.rs  dashboard.rs  demo.rs  demo_tab.rs  explorer.rs  mod.rs  ops_tab.rs  pipeline.rs  runner.rs  theme.rs
tests/: backend_bridge.rs  camera_intrinsics.rs  frame_retrieval.rs  integration.rs  meaningful_end_to_end.rs  patch_geometry.rs  prope_reference.rs  tensor_types.rs  warped_latent_dense.rs  warped_rope_dense.rs
(+1 files in other folders)
