[package]
name = "mosaicmem"
version = "0.1.0"
repository = "https://github.com/AbdelStark/mosaicmem"
keywords = ["video-generation", "world-models", "spatial-memory", "3d-reconstruction", "diffusion"]
categories = ["computer-vision", "multimedia::video", "science"]
edition = "2024"
description = "Rust implementation of MosaicMem: Hybrid Spatial Memory for Video World Models"
license = "MIT"

[features]
default = []
real-backend = []

[[bin]]
name = "mosaicmem"
path = "src/main.rs"

[dependencies]
nalgebra = { version = "0.34", features = ["serde-serialize"] }
ndarray = "0.16"
image = { version = "0.25", default-features = false, features = ["png"] }
rayon = "1.10"
kiddo = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
rand = "0.8"
ratatui = "0.30"
crossterm = "0.28"

[dev-dependencies]
approx = "0.5"
